In theory all UI for settings that require a restart should work and don't break with invalid input

--- a/OverlappingModel2/style.css
+++ b/OverlappingModel2/style.css
@@ -95,11 +95,15 @@ input:focus {
     width: 3em;
     /* text-align: center; */
 }
-input[type="radio"] {
+input[type="file"] {
+    height: 3em;
+    cursor: pointer;
+}
+/* input[type="radio"] {
     width: 0.8em;
     color: #ECEFF4;
     outline: none !important;
-}
+} */
 input[type="checkbox"] {
     width: 0.8em;
     height: 1em;
@@ -109,6 +113,7 @@ input[type="checkbox"] {
     position: relative;
     color: #ECEFF4;
     outline: none !important;
+    cursor: pointer;
 }
 
 button {
